--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,13 @@
 streamlit
-nvidia-modulus.sym==1.4.0
+nvidia-modulus.sym==1.4.0 --no-deps
 matplotlib
+sympy==1.12
+timm==0.5.4
+torch-optimizer==0.3.0
+transforms3d==0.3.1
+typing==3.7.4.3
+pillow==10.0.1
+notebook==6.4.12
+mistune==2.0.3
+pint==0.19.2
+tensorboard>=2.8.0
