--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
 streamlit
 nvidia-modulus.sym==1.4.0 --no-deps
 matplotlib
+hydra-core>=1.2.0
+termcolor>=2.1.1
+chaospy>=4.3.7
+Cython==0.29.28
+numpy-stl==2.16.3
+opencv-python==4.5.5.64
+scikit-learn==1.0.2
+symengine>=0.10.0
 sympy==1.12
 timm==0.5.4
 torch-optimizer==0.3.0
