--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit==1.22.0
+streamlit
 hydra-core>=1.2.0 
 termcolor>=2.1.1
 chaospy>=4.3.7
@@ -11,7 +11,6 @@ sympy==1.12
 timm==0.5.4
 torch-optimizer==0.3.0
 transforms3d==0.3.1
-typing==3.7.4.3
 pillow==10.0.1
 notebook==6.4.12
 mistune==2.0.3
